--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -241,6 +241,63 @@ body #calendar{
     margin-right: auto;
 }
 
+.contact-info{
+    width: 100%;      
+    text-align: center;
+    top:50%;          
+}
+
+.contact-method{
+    width: 260px;
+    height: 115px;
+    display: inline-block;
+    background: #e8491d;
+    margin: 10px;    
+    position: relative;
+    border: 3px solid #e8491d;
+    text-align: center;    
+    cursor: pointer;
+    
+    color:   #2d3542;    
+    font-family: 'montserrat', sans-serif; 
+    font-weight: bold;
+    
+    
+}
+
+
+.contact-method i{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    font-size: 35px;
+    line-height: 115px; 
+    background: #2d3542;    
+    z-index:1;
+    transition: transform 0.6s;
+    color: #e8491d;    
+}
+    
+/* Text - Icon innen */
+.contact-method span{
+    position: absolute;
+    width: 100%;
+    top: 50;
+    left:0;
+    bottom:0px;
+    padding: 10px 0;
+    bottom: 0;   
+    color:inherit !important; 
+    text-decoration: none !important;
+}
+
+.contact-method:hover i{
+transform: translateY(-40px);
+}
+
+
 
 .footer {        
     height: 50px;   
