--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -77,8 +77,13 @@
         <img th:src="@{/images/bmi-grafik.png}" alt="logo" th:class="bmi">
     </p> -->
 
-    <div id="calendar">
+    <div id="calendar">      
     </div>
+    <br>
+  
+    
+    
+    
     <br>
 
     <!-- style="width:700px;height:410px; -->
@@ -130,10 +135,12 @@
             <span>Graz, Österreich</span></a>
     </div>
 </div>
+<!-- Kontakt Sektion Ende -->
 <br>
+<!-- Footer -->
 <div class="footer">
     <p>Copyright &copy; Dominque Mariacher <script>new Date().getFullYear() > 2010 && document.write(+new Date().getFullYear());</script></p>
 </div>
-
+<!-- Ende Footer -->
 </body>     
 </html>
