--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,67 +1,71 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
 figure.image-block {
-  max-width: 50%;
-  
+    max-width: 50%;
+
 }
+
 img.image-block {
-  max-width: 100%;
+    max-width: 100%;
 }
+
 .image-div {
     justify-content: center;
     display: flex;
 }
 
-body{
-overflow-x: hidden;
-font-family: 'Lato', sans-serif;
-color: #505962;
+body {
+    overflow-x: hidden;
+    font-family: 'Lato', sans-serif;
+    color: #505962;
 }
 
 /*--- Navigation ---*/
-.navbar{
+.navbar {
     width: 100%;
-    overflow:hidden;
-    display:block;
+    overflow: hidden;
+    display: block;
     text-transform: uppercase;
     font-weight: 700;
     font-size: .9rem;
-    letter-spacing: .1rem;}
-   /* background-color: (0,0,0,0.6)!important;/*
-    position:fixed;
-        top:0;
-    
+    letter-spacing: .1rem;
+}
+
+/* background-color: (0,0,0,0.6)!important;/*
+ position:fixed;
+     top:0;
+
 }
 
 .navbar-brand img{
-    
-    top:0;
-    left:0;
-    max-width: 100%;
-    max-height: 100%;      
+
+ top:0;
+ left:0;
+ max-width: 100%;
+ max-height: 100%;
 }
 
 .navbar-nav li {
-    padding-right: 25px;
+ padding-right: 25px;
 }
 
 .navbar-dark .navbar-nav .nav-link {
-    color: white;
-    padding-top: .8rem;
-    
+ color: white;
+ padding-top: .8rem;
+
 }
 
 .navbar-dark .navbar-nav .nav-link.active,
 .navbar-dark .navbar-nav .nav-link:hover{
-    color:#e0a800;
+ color:#e0a800;
 }
 
 /*--- Landing Page ---*/
-.home-inner{
-   background: url(/images/Landingpage.PNG);
-   background-size: cover;
-   background-position: center;
-  
+.home-inner {
+    background: url(/images/Landingpage.PNG);
+    background-size: cover;
+    background-position: center;
+
 }
 
 .caption {
@@ -72,22 +76,21 @@ color: #505962;
 }
 
 
-
 .sticky {
-  position: fixed;
-  top: 0;
-  width: 100%
+    position: fixed;
+    top: 0;
+    width: 100%
 }
 
 
 .footer {
-   height: 50px;   
-   padding-top: 10px;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   color:#ffffff;
-   background-color: #e8491d;
-   color: white;
-   text-align: center;   
+    height: 50px;
+    padding-top: 10px;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: #ffffff;
+    background-color: #e8491d;
+    color: white;
+    text-align: center;
 }
