--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -17,7 +17,7 @@ header{
     border-bottom: #e8491d 3.5px solid;
     font-family: 'Lato', sans-serif;    
     overflow: hidden;
-    background-color: rgba(0,0,0,0.80)!important;
+    background-color: rgba(1,0,0,1.80)!important;
 }
 
 
@@ -98,7 +98,7 @@ ul li a:hover
     width: 27%;     
 }
 
-.container{
+.fitness-container{
     color:white;
     font-family: sans-serif; 
     padding-left: 65px;
@@ -233,15 +233,118 @@ body #graph {
 }
 
 body #calendar{
-    color: black;
-    background-color: rgba(255, 255, 255, 0.5);
+    color: black;    
+    background-color: rgba(255, 255, 255, 0.3);
     width:55%;
-    height:55%;
-    margin-left: auto;
-    margin-right: auto;
+    height:65%;
+    margin-left: 15px;
+    margin-right: 0;
+    margin-bottom: 0px;
 }
 
+/*TODO: container ist ein doofer name, da zum beispiel bootstrap den Klassennamen schon belegt. Dadurch wird deine container Klasse überschrieben*/
+.fitness-container {
+    width:1000px;
+    height:300px;
+    padding-top:10px;
+    padding-left:20px;
+    padding-right:43px;
+}
+
+.fitness-container :hover{
+    -moz-box-shadow: 0 0 10px #ccc;
+    -webkit-box-shadow: 0 0 10px #ccc;
+    box-shadow: 0 0 10px #ccc;
+    transition-delay: 0.2s;
+}
+
+#box1 {
+    float:left;
+    width:300px;
+    height:300px;
+    background-color:transparent;
+    border:solid white;
+    border-width: 2px;
+    font-size: 23px;
+    color: white;
+    font-family: 'montserrat', sans-serif;
+    font-weight: bold;
+    text-align: center;
+    vertical-align: middle;
+}
+#box2 {
+    float:left;
+    width:300px;
+    height:300px;
+    background-color:transparent;
+    border:solid white;
+    border-width: 2px;
+    font-size: 23px;
+    color: white;
+    font-family: 'montserrat', sans-serif;
+    font-weight: bold;
+    margin-left:20px;
+}
+#box3 {
+    float:right;
+    width:300px;
+    height:300px;
+    background-color:transparent;
+    border:solid white;
+    border-width: 2px;
+    font-size: 23px;
+    color: white;
+    font-family: 'montserrat', sans-serif;
+    font-weight: bold;
+}
+
+#box4 {
+    float:left;
+    width:300px;
+    height:300px;
+    margin-top: 15px;
+
+    background-color:transparent;
+    border:solid white;
+    border-width: 2px;
+    font-size: 23px;
+    color: white;
+    font-family: 'montserrat', sans-serif;
+    font-weight: bold;
+}
+
+#box5 {
+    float:left;
+    width:300px;
+    height:300px;
+    margin-left:20px;
+    margin-top: 15px;
+    background-color:transparent;
+    border:solid white;
+    border-width: 2px;
+    font-size: 23px;
+    color: white;
+    font-family: 'montserrat', sans-serif;
+    font-weight: bold;
+    text-align: center;
+}
+#box6 {
+    float:right;
+    width:300px;
+    height:300px;
+    margin-top: 15px;
+    background-color:transparent;
+    border:solid white;
+    border-width: 2px;
+    font-size: 23px;
+    color: white;
+    font-family: 'montserrat', sans-serif;
+    font-weight: bold;
+}
+
+
 .contact-info{
+    margin-top: 30px;
     width: 100%;      
     text-align: center;
     top:50%;          
@@ -252,17 +355,15 @@ body #calendar{
     height: 115px;
     display: inline-block;
     background: #e8491d;
-    margin: 10px;    
+    margin: 10px;  
+    margin-top: 50px;
     position: relative;
     border: 3px solid #e8491d;
     text-align: center;    
     cursor: pointer;
-    
     color:   #2d3542;    
     font-family: 'montserrat', sans-serif; 
-    font-weight: bold;
-    
-    
+    font-weight: bold;    
 }
 
 
@@ -279,12 +380,11 @@ body #calendar{
     transition: transform 0.6s;
     color: #e8491d;    
 }
-    
+
 /* Text - Icon innen */
 .contact-method span{
     position: absolute;
-    width: 100%;
-    top: 50;
+    width: 100%;   
     left:0;
     bottom:0px;
     padding: 10px 0;
@@ -294,10 +394,8 @@ body #calendar{
 }
 
 .contact-method:hover i{
-transform: translateY(-40px);
+    transform: translateY(-40px);
 }
-
-
 
 .footer {        
     height: 50px;   
