--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,4 +1,62 @@
 td.action {
-  -space: nowrap;
-  
+    -space: nowrap;
+}
+
+.training-calendar {
+    margin-top: 10px;
+    padding: 15px;
+    width: 112%;
+    text-align: center;
+    font-family: 'montserrat', sans-serif;
+}
+
+#workouts {
+    background: #1a252f;    
+    width: 80%;
+    color: white;
+}
+.workouttype-header {
+    color: black;
+    margin: 0; 
+    font-family: 'montserrat', sans-serif;
+}
+
+.workout-element {
+    position: relative;
+    display: block;
+    font-size: .90em;
+    line-height: 2;
+    background-color: #2c3e50;
+    color: white;
+    margin-bottom: 8px;
+    text-align: center;
+
+}
+
+#weeklyStats {
+    margin-left: 0px;
+    max-width: 1130px;
+}
+
+
+.change-week-container {
+    font-size: 20px;
+    margin: auto auto 16px 34%;
+}
+
+.change-week-container button {
+    left: 50%;
+    right: 50%;
+    text-align: center;   
+}
+
+.displayed-week {
+    color: white;
+    border:solid white;
+    border-width: 2px;
+    padding-top: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 10px;
+    text-align: center;    
 }
