--- a/src/main/resources/templates/ausgabebmi.html
+++ b/src/main/resources/templates/ausgabebmi.html
@@ -18,6 +18,7 @@
         <script src="js/jquery-3.4.1.js" type="text/javascript"></script>
         <script src="js/popper.js" type="text/javascript"></script>
         <script src="js/bootstrap.js" type="text/javascript"></script>
+        <link rel="icon" type="image/png" th:href="@{/images/logo_klein3.PNG}">
     </head>
     <body>
 
