--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -40,9 +40,10 @@
         crossorigin="anonymous"></script>
 
         <script th:src="@{/js/Fullcalendar/calendar.js}"></script>
-
+<link rel="icon" type="image/png" th:href="@{/images/logo_klein3.PNG}">
     </head>
     <body>
+        
         <header>
             <!-- <div id="branding">
                  <a class="navbar-brand" href="#"><img th:src="@{/images/Logo_klein.png}" width="100" height ="100" alt="logo" class="image-block"></a>
@@ -126,37 +127,37 @@
 
             <div class="fitness-container" style="margin: auto">
                 <div id="box1">
-                    <a href="/images/Running.jpeg"><img th:src="@{/images/Running.jpeg}" width="100%" height="85%" alt="logo"
+                    <a href="/images/cardioday.jpg"><img th:src="@{/images/Running.jpeg}" width="100%" height="85%" alt="logo"
                                                         class="image-block"></a>
                     <p> Cardio </p>
                 </div>
 
                 <div id="box2">
-                    <a href="/images/Bizeps.jpg"><img th:src="@{/images/Bizeps.jpg}" width="100%" height="85%" alt="logo"
+                    <a href="/images/biceps_triceps_day.jpg"><img th:src="@{/images/Bizeps.jpg}" width="100%" height="85%" alt="logo"
                                                       class="image-block"></a>
                     <p> Bizeps & Trizeps </p>
                 </div>
 
                 <div id="box3">
-                    <a href="/images/back.PNG"><img th:src="@{/images/back.PNG}" width="100%" height="85%" alt="logo"
+                    <a href="/images/back-workout.jpg"><img th:src="@{/images/back.PNG}" width="100%" height="85%" alt="logo"
                                                     class="image-block"></a>
                     <p> Rücken & Schultern</p>
                 </div>
 
                 <div id="box4">
-                    <a href="/images/chest.png"><img th:src="@{/images/chest.png}" width="100%" height="85%" alt="logo"
+                    <a href="/images/chestday.jpg"><img th:src="@{/images/chest.png}" width="100%" height="85%" alt="logo"
                                                      class="image-block"></a>
                     <p> Brust </p>
                 </div>
 
                 <div id="box5">
-                    <a href="/images/belly.jpg"><img th:src="@{/images/belly.jpg}" width="100%" height="85%" alt="logo"
+                    <a href="/images/bellyday.jpg"><img th:src="@{/images/belly.jpg}" width="100%" height="85%" alt="logo"
                                                      class="image-block"></a>
                     <p> Bauch </p>
                 </div>
 
                 <div id="box6">
-                    <a href="/images/legs.jpg"><img th:src="@{/images/legs.jpg}" width="100%" height="85%" alt="logo"
+                    <a href="/images/Legday.jpg"><img th:src="@{/images/legs.jpg}" width="100%" height="85%" alt="logo"
                                                     class="image-block"></a>
                     <p> Beine </p>
                 </div>
